objects/maps__AdvRouteQueryFilter__c.object
<CustomObject>
    <fields>
        <fullName>maps__AdvRouteQueryFilterGrouping__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Maps Advanced Route Query Filter Group</label>
        <referenceTo>maps__AdvRouteQueryFilterGrouping__c</referenceTo>
        <relationshipLabel>Maps Advanced Route Query Filters</relationshipLabel>
        <relationshipName>AdvRouteQueryFilters</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>maps__BooleanValue__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is value of the checkbox</description>
        <label>Boolean Value</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>maps__DateValue__c</fullName>
        <description>This is the date value</description>
        <label>Date Value</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>maps__FieldApi__c</fullName>
        <label>Field Api</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__LogicOrder__c</fullName>
        <label>Logic Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>maps__Operator__c</fullName>
        <label>Operator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__TimeValue__c</fullName>
        <label>Time Value</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>maps__Type__c</fullName>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__Value__c</fullName>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Maps Advanced Route Query Filter</label>
    <nameField>
        <label>Maps Advanced Route Query Filter Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Maps Advanced Route Query Filters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>